# backend/swagger.yaml
@@ -750,6 +750,58 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/errorResponse'
+  /users/friends-requests:
+    get:
+      tags: [users]
+      summary: "Récupérer les demandes d'amis"
+      description: "Récupérer les demandes d'amis de l'utilisateur"
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  friendsRequests:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          type: string
+                        sender:
+                          type: object
+                          properties:
+                            username:
+                              type: string
+                            avatarUrl:
+                              type: string
+                            id:
+                              type: string
+                        createdAt:
+                          type: string
+                          format: date-time
+        '401':
+          description: Erreur d'authentification
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/errorResponse'
+        '404':
+          description: Utilisateur non trouvé
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/errorResponse'
+        '500':
+          description: Erreur interne du serveur
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/errorResponse'
   /users/search:
     get:
       tags: [users]
